C/grammar.output
Terminaux qui ne sont utilisés

   '+'
   '-'
   '*'
   '/'
   X_UMINUS


Grammaire

    0 $accept: start $end

    1 start: /* vide */
    2      | t_eof
    3      | start expression

    4 expression: role
    5           | class
    6           | type

    7 role: t_roles '{' roles_list '}'

    8 class: t_class t_ident '{' class_list '}'

    9 type: t_type t_ident t_as type_properties

   10 roles_list: /* vide */
   11           | roles_list roles_list_entry

   12 roles_list_entry: vtype_num t_ident ','

   13 class_list: /* vide */
   14           | class_list class_list_entry

   15 class_list_entry: vtype t_ident class_list_vtype_properties ','
   16                 | t_ident t_ident class_list_vtype_properties ','

   17 class_list_vtype_properties: vtype_range vtype_fn vtype_default

   18 type_properties: vtype vtype_range vtype_fn ';'

   19 vtype: t_uint
   20      | t_int
   21      | t_string
   22      | t_bool

   23 vtype_range: '[' vtype_num ':' vtype_num ']'
   24            | '[' vtype_num ']'
   25            | /* vide */

   26 vtype_fn: /* vide */
   27         | t_ident params

   28 vtype_default: /* vide */
   29              | '=' vtype_var

   30 params: /* vide */
   31       | '(' ')'
   32       | vtype_var
   33       | '(' vtype_list ')'

   34 vtype_list: vtype_list ',' vtype_var
   35           | vtype_var

   36 vtype_var: vtype_num
   37          | t_rxval
   38          | t_stringval

   39 vtype_num: t_intval
   40          | t_uintval


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 31 33
')' (41) 31 33
'*' (42)
'+' (43)
',' (44) 12 15 16 34
'-' (45)
'/' (47)
':' (58) 23
';' (59) 18
'=' (61) 29
'[' (91) 23 24
']' (93) 23 24
'{' (123) 7 8
'}' (125) 7 8
error (256)
t_roles (258) 7
t_class (259) 8
t_type (260) 9
t_as (261) 9
t_int (262) 20
t_uint (263) 19
t_string (264) 21
t_ident (265) 8 9 12 15 16 27
t_bool (266) 22
t_intval (267) 39
t_uintval (268) 40
t_rxval (269) 37
t_stringval (270) 38
t_eof (271) 2
X_UMINUS (272)


Non-terminaux, suivis des règles où ils apparaissent

$accept (32)
    à gauche: 0
start (33)
    à gauche: 1 2 3, à droite: 0 3
expression (34)
    à gauche: 4 5 6, à droite: 3
role (35)
    à gauche: 7, à droite: 4
class (36)
    à gauche: 8, à droite: 5
type (37)
    à gauche: 9, à droite: 6
roles_list (38)
    à gauche: 10 11, à droite: 7 11
roles_list_entry (39)
    à gauche: 12, à droite: 11
class_list (40)
    à gauche: 13 14, à droite: 8 14
class_list_entry (41)
    à gauche: 15 16, à droite: 14
class_list_vtype_properties (42)
    à gauche: 17, à droite: 15 16
type_properties (43)
    à gauche: 18, à droite: 9
vtype (44)
    à gauche: 19 20 21 22, à droite: 15 18
vtype_range (45)
    à gauche: 23 24 25, à droite: 17 18
vtype_fn (46)
    à gauche: 26 27, à droite: 17 18
vtype_default (47)
    à gauche: 28 29, à droite: 17
params (48)
    à gauche: 30 31 32 33, à droite: 27
vtype_list (49)
    à gauche: 34 35, à droite: 33 34
vtype_var (50)
    à gauche: 36 37 38, à droite: 29 32 34 35
vtype_num (51)
    à gauche: 39 40, à droite: 12 23 24 36


état 0

    0 $accept: . start $end

    t_eof  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 1 (start)

    start  aller à l'état 2


état 1

    2 start: t_eof .

    $défaut  réduction par utilisation de la règle 2 (start)


état 2

    0 $accept: start . $end
    3 start: start . expression

    $end     décalage et aller à l'état 3
    t_roles  décalage et aller à l'état 4
    t_class  décalage et aller à l'état 5
    t_type   décalage et aller à l'état 6

    expression  aller à l'état 7
    role        aller à l'état 8
    class       aller à l'état 9
    type        aller à l'état 10


état 3

    0 $accept: start $end .

    $défaut  accepter


état 4

    7 role: t_roles . '{' roles_list '}'

    '{'  décalage et aller à l'état 11


état 5

    8 class: t_class . t_ident '{' class_list '}'

    t_ident  décalage et aller à l'état 12


état 6

    9 type: t_type . t_ident t_as type_properties

    t_ident  décalage et aller à l'état 13


état 7

    3 start: start expression .

    $défaut  réduction par utilisation de la règle 3 (start)


état 8

    4 expression: role .

    $défaut  réduction par utilisation de la règle 4 (expression)


état 9

    5 expression: class .

    $défaut  réduction par utilisation de la règle 5 (expression)


état 10

    6 expression: type .

    $défaut  réduction par utilisation de la règle 6 (expression)


état 11

    7 role: t_roles '{' . roles_list '}'

    $défaut  réduction par utilisation de la règle 10 (roles_list)

    roles_list  aller à l'état 14


état 12

    8 class: t_class t_ident . '{' class_list '}'

    '{'  décalage et aller à l'état 15


état 13

    9 type: t_type t_ident . t_as type_properties

    t_as  décalage et aller à l'état 16


état 14

    7 role: t_roles '{' roles_list . '}'
   11 roles_list: roles_list . roles_list_entry

    t_intval   décalage et aller à l'état 17
    t_uintval  décalage et aller à l'état 18
    '}'        décalage et aller à l'état 19

    roles_list_entry  aller à l'état 20
    vtype_num         aller à l'état 21


état 15

    8 class: t_class t_ident '{' . class_list '}'

    $défaut  réduction par utilisation de la règle 13 (class_list)

    class_list  aller à l'état 22


état 16

    9 type: t_type t_ident t_as . type_properties

    t_int     décalage et aller à l'état 23
    t_uint    décalage et aller à l'état 24
    t_string  décalage et aller à l'état 25
    t_bool    décalage et aller à l'état 26

    type_properties  aller à l'état 27
    vtype            aller à l'état 28


état 17

   39 vtype_num: t_intval .

    $défaut  réduction par utilisation de la règle 39 (vtype_num)


état 18

   40 vtype_num: t_uintval .

    $défaut  réduction par utilisation de la règle 40 (vtype_num)


état 19

    7 role: t_roles '{' roles_list '}' .

    $défaut  réduction par utilisation de la règle 7 (role)


état 20

   11 roles_list: roles_list roles_list_entry .

    $défaut  réduction par utilisation de la règle 11 (roles_list)


état 21

   12 roles_list_entry: vtype_num . t_ident ','

    t_ident  décalage et aller à l'état 29


état 22

    8 class: t_class t_ident '{' class_list . '}'
   14 class_list: class_list . class_list_entry

    t_int     décalage et aller à l'état 23
    t_uint    décalage et aller à l'état 24
    t_string  décalage et aller à l'état 25
    t_ident   décalage et aller à l'état 30
    t_bool    décalage et aller à l'état 26
    '}'       décalage et aller à l'état 31

    class_list_entry  aller à l'état 32
    vtype             aller à l'état 33


état 23

   20 vtype: t_int .

    $défaut  réduction par utilisation de la règle 20 (vtype)


état 24

   19 vtype: t_uint .

    $défaut  réduction par utilisation de la règle 19 (vtype)


état 25

   21 vtype: t_string .

    $défaut  réduction par utilisation de la règle 21 (vtype)


état 26

   22 vtype: t_bool .

    $défaut  réduction par utilisation de la règle 22 (vtype)


état 27

    9 type: t_type t_ident t_as type_properties .

    $défaut  réduction par utilisation de la règle 9 (type)


état 28

   18 type_properties: vtype . vtype_range vtype_fn ';'

    '['  décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 25 (vtype_range)

    vtype_range  aller à l'état 35


état 29

   12 roles_list_entry: vtype_num t_ident . ','

    ','  décalage et aller à l'état 36


état 30

   16 class_list_entry: t_ident . t_ident class_list_vtype_properties ','

    t_ident  décalage et aller à l'état 37


état 31

    8 class: t_class t_ident '{' class_list '}' .

    $défaut  réduction par utilisation de la règle 8 (class)


état 32

   14 class_list: class_list class_list_entry .

    $défaut  réduction par utilisation de la règle 14 (class_list)


état 33

   15 class_list_entry: vtype . t_ident class_list_vtype_properties ','

    t_ident  décalage et aller à l'état 38


état 34

   23 vtype_range: '[' . vtype_num ':' vtype_num ']'
   24            | '[' . vtype_num ']'

    t_intval   décalage et aller à l'état 17
    t_uintval  décalage et aller à l'état 18

    vtype_num  aller à l'état 39


état 35

   18 type_properties: vtype vtype_range . vtype_fn ';'

    t_ident  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 26 (vtype_fn)

    vtype_fn  aller à l'état 41


état 36

   12 roles_list_entry: vtype_num t_ident ',' .

    $défaut  réduction par utilisation de la règle 12 (roles_list_entry)


état 37

   16 class_list_entry: t_ident t_ident . class_list_vtype_properties ','

    '['  décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 25 (vtype_range)

    class_list_vtype_properties  aller à l'état 42
    vtype_range                  aller à l'état 43


état 38

   15 class_list_entry: vtype t_ident . class_list_vtype_properties ','

    '['  décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 25 (vtype_range)

    class_list_vtype_properties  aller à l'état 44
    vtype_range                  aller à l'état 43


état 39

   23 vtype_range: '[' vtype_num . ':' vtype_num ']'
   24            | '[' vtype_num . ']'

    ':'  décalage et aller à l'état 45
    ']'  décalage et aller à l'état 46


état 40

   27 vtype_fn: t_ident . params

    t_intval     décalage et aller à l'état 17
    t_uintval    décalage et aller à l'état 18
    t_rxval      décalage et aller à l'état 47
    t_stringval  décalage et aller à l'état 48
    '('          décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 30 (params)

    params     aller à l'état 50
    vtype_var  aller à l'état 51
    vtype_num  aller à l'état 52


état 41

   18 type_properties: vtype vtype_range vtype_fn . ';'

    ';'  décalage et aller à l'état 53


état 42

   16 class_list_entry: t_ident t_ident class_list_vtype_properties . ','

    ','  décalage et aller à l'état 54


état 43

   17 class_list_vtype_properties: vtype_range . vtype_fn vtype_default

    t_ident  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 26 (vtype_fn)

    vtype_fn  aller à l'état 55


état 44

   15 class_list_entry: vtype t_ident class_list_vtype_properties . ','

    ','  décalage et aller à l'état 56


état 45

   23 vtype_range: '[' vtype_num ':' . vtype_num ']'

    t_intval   décalage et aller à l'état 17
    t_uintval  décalage et aller à l'état 18

    vtype_num  aller à l'état 57


état 46

   24 vtype_range: '[' vtype_num ']' .

    $défaut  réduction par utilisation de la règle 24 (vtype_range)


état 47

   37 vtype_var: t_rxval .

    $défaut  réduction par utilisation de la règle 37 (vtype_var)


état 48

   38 vtype_var: t_stringval .

    $défaut  réduction par utilisation de la règle 38 (vtype_var)


état 49

   31 params: '(' . ')'
   33       | '(' . vtype_list ')'

    t_intval     décalage et aller à l'état 17
    t_uintval    décalage et aller à l'état 18
    t_rxval      décalage et aller à l'état 47
    t_stringval  décalage et aller à l'état 48
    ')'          décalage et aller à l'état 58

    vtype_list  aller à l'état 59
    vtype_var   aller à l'état 60
    vtype_num   aller à l'état 52


état 50

   27 vtype_fn: t_ident params .

    $défaut  réduction par utilisation de la règle 27 (vtype_fn)


état 51

   32 params: vtype_var .

    $défaut  réduction par utilisation de la règle 32 (params)


état 52

   36 vtype_var: vtype_num .

    $défaut  réduction par utilisation de la règle 36 (vtype_var)


état 53

   18 type_properties: vtype vtype_range vtype_fn ';' .

    $défaut  réduction par utilisation de la règle 18 (type_properties)


état 54

   16 class_list_entry: t_ident t_ident class_list_vtype_properties ',' .

    $défaut  réduction par utilisation de la règle 16 (class_list_entry)


état 55

   17 class_list_vtype_properties: vtype_range vtype_fn . vtype_default

    '='  décalage et aller à l'état 61

    $défaut  réduction par utilisation de la règle 28 (vtype_default)

    vtype_default  aller à l'état 62


état 56

   15 class_list_entry: vtype t_ident class_list_vtype_properties ',' .

    $défaut  réduction par utilisation de la règle 15 (class_list_entry)


état 57

   23 vtype_range: '[' vtype_num ':' vtype_num . ']'

    ']'  décalage et aller à l'état 63


état 58

   31 params: '(' ')' .

    $défaut  réduction par utilisation de la règle 31 (params)


état 59

   33 params: '(' vtype_list . ')'
   34 vtype_list: vtype_list . ',' vtype_var

    ','  décalage et aller à l'état 64
    ')'  décalage et aller à l'état 65


état 60

   35 vtype_list: vtype_var .

    $défaut  réduction par utilisation de la règle 35 (vtype_list)


état 61

   29 vtype_default: '=' . vtype_var

    t_intval     décalage et aller à l'état 17
    t_uintval    décalage et aller à l'état 18
    t_rxval      décalage et aller à l'état 47
    t_stringval  décalage et aller à l'état 48

    vtype_var  aller à l'état 66
    vtype_num  aller à l'état 52


état 62

   17 class_list_vtype_properties: vtype_range vtype_fn vtype_default .

    $défaut  réduction par utilisation de la règle 17 (class_list_vtype_properties)


état 63

   23 vtype_range: '[' vtype_num ':' vtype_num ']' .

    $défaut  réduction par utilisation de la règle 23 (vtype_range)


état 64

   34 vtype_list: vtype_list ',' . vtype_var

    t_intval     décalage et aller à l'état 17
    t_uintval    décalage et aller à l'état 18
    t_rxval      décalage et aller à l'état 47
    t_stringval  décalage et aller à l'état 48

    vtype_var  aller à l'état 67
    vtype_num  aller à l'état 52


état 65

   33 params: '(' vtype_list ')' .

    $défaut  réduction par utilisation de la règle 33 (params)


état 66

   29 vtype_default: '=' vtype_var .

    $défaut  réduction par utilisation de la règle 29 (vtype_default)


état 67

   34 vtype_list: vtype_list ',' vtype_var .

    $défaut  réduction par utilisation de la règle 34 (vtype_list)
